# discerpo

./: .gitignore  README.md  bot.py  botToken.py  disasm.py  download.py  pip.txt  pyproject.toml
backend/: __init__.py  disassemblers.py  download.py
cogs/: admin_commands.py  re.py  rm.py
disasm/: __init__.py  disassemble.py
dl/: __init__.py  download.py
errors/: __init__.py  logger.py  machine.py
files/: 865159891491618836
