[tool.poetry]
name = "Discerpo"
version = "0.9.0"
description = "A discord bot that dissasembles executables"
authors = ["Gabriel"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
capstone = "^5.0.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
pefile = "^2023.2.7"
jishaku = "^2.5.1"
aiofiles = "^0.8.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
